mise en place de HttpClient pour tous les gets à la place mapper.readvalue